# mc-avoid

./: .gitignore  CMakeLists.txt  README.md  autoctrl.cpp  collect.cpp  control.cpp  control.h  curlTest.cpp  exp.cpp  main.cpp  manualctrl.cpp  navigation.h  step_exp.cpp  test.cpp
1/: README  changepoints000.tsv  changepoints001.tsv  changepoints002.tsv  changepoints003.tsv  changepoints004.tsv  changepoints005.tsv  changepoints006.tsv  changepoints007.tsv  changepoints008.tsv  changepoints009.tsv  changepoints010.tsv  changepoints011.tsv  changepoints012.tsv  changepoints013.tsv  changepoints014.tsv  changepoints015.tsv  changepoints016.tsv  changepoints017.tsv  changepoints018.tsv  changepoints019.tsv  changepoints020.tsv  changepoints021.tsv  changepoints022.tsv  changepoints023.tsv  changepoints024.tsv  changepoints025.tsv  changepoints026.tsv  changepoints027.tsv  changepoints028.tsv  changepoints029.tsv  changepoints030.tsv  changepoints031.tsv  changepoints032.tsv  changepoints033.tsv  changepoints034.tsv  changepoints035.tsv  changepoints036.tsv  changepoints037.tsv  changepoints038.tsv  (+458 more)
2/: README  changepoints000.tsv  changepoints001.tsv  changepoints002.tsv  changepoints003.tsv  changepoints004.tsv  changepoints005.tsv  changepoints006.tsv  changepoints007.tsv  changepoints008.tsv  changepoints009.tsv  changepoints010.tsv  changepoints011.tsv  changepoints012.tsv  changepoints013.tsv  changepoints014.tsv  changepoints015.tsv  changepoints016.tsv  changepoints017.tsv  changepoints018.tsv  changepoints019.tsv  changepoints020.tsv  changepoints021.tsv  changepoints022.tsv  changepoints023.tsv  changepoints024.tsv  changepoints025.tsv  changepoints026.tsv  changepoints027.tsv  changepoints028.tsv  changepoints029.tsv  changepoints030.tsv  changepoints031.tsv  changepoints032.tsv  changepoints033.tsv  changepoints034.tsv  changepoints035.tsv  changepoints036.tsv  changepoints037.tsv  changepoints038.tsv  (+72 more)
3/: autoctrl.txt
4/: autoctrl.txt
5/: autoctrl.txt
6/: autoctrl.txt
agent/: .agent.cpp.swp  CMakeLists.txt  agent.cpp  agent.h  logger.h
analysis/: culdesac-1.ipynb
analysis/.ipynb_checkpoints/: culdesac-1-checkpoint.ipynb
analysis/culdesac-scenario/1/.ipynb_checkpoints/: autoctrl-checkpoint.txt
lib/: CMakeLists.txt  control.cpp  control.h  lib.cpp  lib.h  logger.h
old/: control.cpp  curlTest.cpp  runaway.cpp  test.cpp
